# rsst

./: Cargo.toml
src/: client.rs  feed.rs  lib.rs
tests/: parsing.rs
tests/examples/: huffpo.xml  nypost.rss  politicopicks.xml
