[package]
name = "rsst"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
roxmltree-serde = { git = "https://github.com/jac3km4/roxmltree-serde.git", rev = "v0.1.0" }
time = { version = "0.3", features = ["parsing", "formatting"] }
ouroboros = { version = "0.15", optional = true }

[dependencies.generic-async-http-client]
version = "0.3"
features = ["use_hyper"]
default-features = false
optional = true

[features]
client = ["dep:generic-async-http-client", "dep:ouroboros"]
rustls = ["generic-async-http-client?/rustls"]
