[package]
name = "rsst"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
roxmltree-serde = { git = "https://github.com/jac3km4/roxmltree-serde.git", rev = "v0.1.0" }
time = { version = "0.3", features = ["parsing", "formatting"] }
ouroboros = { version = "0.15", optional = true }
hyper = { version = "0.14", features = ["http1", "http2", "client", "runtime" ], optional = true }
hyper-rustls = { version = "0.23", features = ["http2"], optional = true }

[features]
client = ["dep:hyper", "dep:hyper-rustls", "dep:ouroboros"]
rustls = ["dep:hyper-rustls"]
